# LS-MCMC

./: .gitignore  README.md  example.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/api/: algorithms.md  logging.md  model.md  output.md  sampling.md  storage.md
docs/usage/: BIP.md  usage.md
examples/: example.ipynb  model_banana_2D.py
src/large_scale_mcmc/: __init__.py  algorithms.py  logging.py  model.py  output.py  sampling.py  statistics.py  storage.py
src/ls_mcmc/: algorithms.py  logging.py  storage.py
src/lsmcmc/: algorithms.py  logging.py  model.py  output.py  sampling.py  storage.py
test/: test_integration.py  test_model_banana_integration.py  test_storage.py
