[project]
name = "large-scale-mcmc"
version = "0.1.0"
authors = [{name = "Maximilian Kruse", email = "maximilian.kruse@kit.edu"}]
description = "Add a short description here"
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "zarr>=2.18.3",
]

[project.optional-dependencies]
style = [
    "ruff>=0.7.0",
]
notebook = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "EM101", "EM102", "TRY003", "COM812", "RET504", "S101", "PD008", "TRY401", "B012", "FBT001",
    "ANN401"
]
pydocstyle.convention = "google"

